--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="application.css" />
     <script src="application.js" type="text/javascript"></script>
     <script type="text/javascript">
-      $(require("NotesApp").init);
+      $(document).bind("pageinit", require("NotesApp").init);
     </script>
   </head>
   <body>
