Adds no notes message and fixes style

--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,7 @@
         <h1>My Notes</h1>
         <a href="#note-editor-page" class="ui-btn-right" data-theme="b" data-icon="plus">New</a>
       </div>
-      <div data-role="content" id="notes-list-content">
-      </div>
+      <div data-role="content" id="notes-list-content"></div>
     </div>
   </body>
 </html>
