--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <div data-role="page" id="notes-list-page" data-title="My Notes">
       <div data-role="header" data-position="fixed">
         <h1>My Notes</h1>
-        <a href="#note-editor-page" class="ui-btn-right" data-theme="b" data-icon="plus">New</a>
+        <a href="#notes-editor-page" class="ui-btn-right" data-theme="b" data-icon="plus">New</a>
       </div>
       <div data-role="content" id="notes-list-content"></div>
     </div>
