--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,8 @@
           <input type="text" name="note-title-editor" id="note-title-editor" value="" />
           <label for="note-narrative-editor">Narrative:</label>
           <textarea name="note-narrative-editor" id="note-narrative-editor"></textarea>
+          <p>Created on: <span id="note-created-on"></span></p>
+          <p>Last updated on: <span id="note-updated-at"></span></p>
         </form>
       </div>
       <div data-role="footer" data-position="fixed" class="ui-bar">
