Adds save and delete code
Adds a currentNote state tracking

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       <div data-role="header" data-position="fixed">
         <a href="#notes-list-page" data-icon="back" data-rel="back">Cancel</a>
         <h1>Edit Note</h1>
-        <a id="save-note-button" href="" data-theme="b" data-icon="check">Save</a>
+        <a id="save-note-button" data-theme="b" data-icon="check">Save</a>
       </div>
       <div data-role="content" id="note-editor-content">
         <form action="#" method="post" id="note-editor-form">
