--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <title>Notes App - Sample</title>
     <meta http-equiv="Content-type" content="text/html; charset=iso-8859-1" />
     <meta http-equiv="Content-Language" content="en-us" />
-    <meta name="viewport" content="initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="application.css" />
     <script src="application.js" type="text/javascript"></script>
     <script type="text/javascript">
@@ -16,6 +16,7 @@
     <!-- Index Page -->
     <div data-role="page" id="notes-list-page" data-title="My Notes">
       <div data-role="header" data-position="fixed">
+        <a href="about.html" data-icon="info" data-rel="dialog" data-inline="true" data-transition="flip">About</a>
         <h1>My Notes</h1>
         <a href="#notes-editor-page" class="ui-btn-right" data-theme="b" data-icon="plus">New</a>
       </div>
