--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-foo
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Notes App - Sample</title>
+    <meta http-equiv="Content-type" content="text/html; charset=iso-8859-1" />
+    <meta http-equiv="Content-Language" content="en-us" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="application.css" />
+    <script src="application.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      $(document).one("pageinit", require("NotesApp").init);
+    </script>
+  </head>
+  <body>
+
+    <!-- Index Page -->
+    <div data-role="page" id="notes-list-page" data-title="My Notes">
+      <div data-role="header" data-position="fixed">
+        <a href="about.html" data-icon="info" data-rel="dialog" data-inline="true" data-transition="flip">About</a>
+        <h1>My Notes</h1>
+        <a href="#notes-editor-page" class="ui-btn-right" data-theme="b" data-icon="plus">New</a>
+      </div>
+      <div data-role="content" id="notes-list-content"></div>
+    </div>
+
+    <!-- Edit Page -->
+    <div id="notes-editor-page" data-role="page" data-title="Edit Note">
+      <div data-role="header" data-position="fixed">
+        <a href="#notes-list-page" data-icon="back" data-rel="back">Cancel</a>
+        <h1>Edit Note</h1>
+        <a id="save-note-button" data-theme="b" data-icon="check">Save</a>
+      </div>
+      <div data-role="content" id="note-editor-content">
+        <form action="#" method="post" id="note-editor-form">
+          <input id="note-id" name="note-id" type="hidden" value="" />
+          <label for="note-title-editor">Title:</label>
+          <input type="text" name="note-title-editor" id="note-title-editor" value="" />
+          <label for="note-narrative-editor">Narrative:</label>
+          <textarea name="note-narrative-editor" id="note-narrative-editor"></textarea>
+          <p>Created on: <span id="note-created-on"></span></p>
+          <p>Last updated on: <span id="note-updated-at"></span></p>
+        </form>
+      </div>
+      <div data-role="footer" data-position="fixed" class="ui-bar">
+        <a id="delete-note-button" data-icon="delete" data-transition="slideup" data-rel="dialog">Delete</a>
+      </div>
+    </div>
+  </div>
+
+  </body>
+</html>
+
+<!-- vim:set et sw=2: -->
