Fixes grammer and adds author

--- a/public/about.html
+++ b/public/about.html
@@ -26,7 +26,8 @@
         <p>Source Code available on
         <a href="https://github.com/sukima/NotesApp-Sample" rel="external">GitHub</a>.
         Feel free to clone/fork and try running the tests.</p>
-        <p>Licenced under the <a href="http://tritarget.org/wywtpl/" rel="external">WYWTPL</a> version 3.</p>
+        <p>Licenced under the <a href="http://tritarget.org/wywtpl/" rel="external">WYWTPL</a> version 3 by
+        <a href="http://tritarget.org/" rel="external">Devin Weaver</a>.</p>
       </div>
     </div>
   </body>
