Fixes about page. Adds links

--- a/public/about.html
+++ b/public/about.html
@@ -18,15 +18,23 @@
         <a href="http://miamicoder.com/2011/building-a-jquery-mobile-application-part-1/" rel="external">tutorial</a>
         by Jorge Ramon which offered a small sample application to store notes.</p>
         <p>I took this and designed this application. It illustrates using
-        jQuery, jQuery-mobile, jQuery-mobile router, Handlebars, jStorage
-        plugin, and CoffeeScript. I uses hem as the package manager and Jasmine
+        <a rel="external" href="http://jquery.com/">jQuery</a>,
+        <a rel="external" href="http://jquerymobile.com/">jQuery Mobile</a>,
+        <a rel="external" href="https://github.com/azicchetti/jquerymobile-router">jQuery-mobile router</a>,
+        <a rel="external" href="http://handlebarsjs.com/">Handlebars.js</a>,
+        <a rel="external" href="http://www.jstorage.info/">jStorage</a>,
+        and <a rel="external" href="http://coffeescript.org/">CoffeeScript</a>.
+        I use <a rel="external" href="https://github.com/maccman/hem">hem</a> as the package manager and
+        <a rel="external" href="http://pivotal.github.com/jasmine/">Jasmine</a>
         for unit testing. I also created a very simple data Model, View, and
         Controller. This was an exercise in doing things by hand. I recommend
-        using an established MV* framework such as Backbone or Ember.</p>
+        using an established MV* framework such as
+        <a rel="external" href="http://backbonejs.org/">Backbone</a>
+        or <a rel="external" href="http://emberjs.com/">Ember</a>.</p>
         <p>Source Code available on
         <a href="https://github.com/sukima/NotesApp-Sample" rel="external">GitHub</a>.
         Feel free to clone/fork and try running the tests.</p>
-        <p>Licenced under the <a href="http://tritarget.org/wywtpl/" rel="external">WYWTPL</a> version 3 by
+        <p>Licenced under the <a href="http://tritarget.org/wywtpl/" rel="external">Do What You Want To Public License</a> version 3 by
         <a href="http://tritarget.org/" rel="external">Devin Weaver</a>.</p>
       </div>
     </div>
