Adds manifests, qrcode, etc.

--- a/public/about.html
+++ b/public/about.html
@@ -36,6 +36,12 @@
         Feel free to clone/fork and try running the tests.</p>
         <p>Licenced under the <a href="http://tritarget.org/wywtpl/" rel="external">Do What You Want To Public License</a> version 3 by
         <a href="http://tritarget.org/" rel="external">Devin Weaver</a>.</p>
+        <script type="text/javascript">
+          if (! /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ) {
+            document.write('<p>Scan the following code to run on your mobile device:</p>');
+            document.write('<center><img src="images/NotesApp-Sample-qrcode.png" /></center>');
+          }
+        </script>
       </div>
     </div>
   </body>
