--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html manifest="cache.manifest">
   <head>
-    <title>Notes App - Sample</title>
-    <meta http-equiv="Content-type" content="text/html; charset=iso-8859-1" />
-    <meta http-equiv="Content-Language" content="en-us" />
-    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
+    <title>Notes App</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <link rel="apple-touch-icon" href="images/logo_57.png"/>
+    <link rel="apple-touch-icon" href="images/notepad_57.png"/>
     <link rel="apple-touch-startup-image" href="images/startup.png" />
     <link rel="stylesheet" href="application.css" media="screen, mobile" />
     <script src="application.js" type="text/javascript"></script>
