--- a/public/about.html
+++ b/public/about.html
@@ -14,6 +14,9 @@
         <h1>About NotesApp</h1>
       </div>
       <div data-role="content">
+        <img src="images/notepad_128.png" alt="NotesApp Icon" width="128" height="128" align="left" />
+        <h2>Notes App</h2>
+        <h4>By Devin Weaver</h4>
         <p>I came across a
         <a href="http://miamicoder.com/2011/building-a-jquery-mobile-application-part-1/" rel="external">tutorial</a>
         by Jorge Ramon which offered a small sample application to store notes.</p>
@@ -23,6 +26,7 @@
         <a rel="external" href="https://github.com/azicchetti/jquerymobile-router">jQuery-mobile router</a>,
         <a rel="external" href="http://handlebarsjs.com/">Handlebars.js</a>,
         <a rel="external" href="http://www.jstorage.info/">jStorage</a>,
+        <a rel="external" href="http://code.google.com/p/mobile-bookmark-bubble/">Google Bookmark Bubble</a>,
         and <a rel="external" href="http://coffeescript.org/">CoffeeScript</a>.
         I use <a rel="external" href="https://github.com/maccman/hem">hem</a> as the package manager and
         <a rel="external" href="http://pivotal.github.com/jasmine/">Jasmine</a>
@@ -35,12 +39,14 @@
         <a href="https://github.com/sukima/NotesApp-Sample" rel="external">GitHub</a>.
         Feel free to clone/fork and try running the tests.</p>
         <p>Licenced under the <a href="http://tritarget.org/wywtpl/" rel="external">Do What You Want To Public License</a> version 3 by
-        <a href="http://tritarget.org/" rel="external">Devin Weaver</a>.</p>
+        <a href="http://tritarget.org/" rel="external">Devin Weaver</a>.
+        <small>(Libraries used and included in this source are subject to their own respective licenses)</small></p>
+        <div id="qrcode" style="display:none">
+          <p>Scan the following code to run on your mobile device:</p>
+          <center><img id="qrcode-image" src="data:image/png;base64," /></center>
+        </div>
         <script type="text/javascript">
-          if (! /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ) {
-            document.write('<p>Scan the following code to run on your mobile device:</p>');
-            document.write('<center><img src="images/NotesApp-Sample-qrcode.png" /></center>');
-          }
+          require("Utils").addQRCode();
         </script>
       </div>
     </div>
