--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <script src="application.js" type="text/javascript"></script>
   </head>
   <body>
-    <div data-role="page" data-title="About" data-url="about.html">
+    <div data-role="page" data-title="About">
       <div id="about-header" data-role="header">
         <h1>About NotesApp</h1>
       </div>
